Fixed badly implemented image alignment

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -74,6 +74,7 @@ html, body, .google-map {
 }
 
 .header img {
+    float: left;
     height: 140px;
     margin-right: 8%;
 }
